--- a/math.html
+++ b/math.html
@@ -21,6 +21,22 @@
     nav a { margin: 0 15px; color: #3975a7; text-decoration: none; }
     nav a:hover { text-decoration: underline; }
     footer { text-align: center; padding: 30px; color: #aaa; font-size: 0.9em; }
+  
+    .category-nav {
+      text-align: center;
+      padding: 30px 10px;
+      font-size: 0.95em;
+      color: #555;
+    }
+    .category-nav a {
+      color: #2d5f89;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    .category-nav a:hover {
+      text-decoration: underline;
+    }
+
   </style>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LB1F4LWXLQ"></script>
@@ -44,6 +60,16 @@
   <div class="container">
 
   </div>
-  <footer>&copy; 2025 Leia's Edu Blog. All rights reserved.</footer>
+  <footer>&copy; 2025 Leia's Edu Blog. All rights reserved.
+  <div class="category-nav">
+    <a href="index.html">🏠 홈으로</a> |
+    <a href="math.html">수학 공부법</a> |
+    <a href="habit.html">공부 습관</a> |
+    <a href="parent.html">부모 교육</a> |
+    <a href="exam.html">시험 전략</a> |
+    <a href="admission.html">입시 전략</a>
+  </div>
+
+  </footer>
 </body>
 </html>
