--- a/habit.html
+++ b/habit.html
@@ -39,6 +39,12 @@
 
   </style>
 
+}
+  gtag('js', new Date());
+  gtag('config', 'G-LB1F4LWXLQ');
+</script>
+
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LB1F4LWXLQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
