--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
   </header>
 
   <nav style="background: #e0f0ff; padding: 10px 20px; text-align: center; font-weight: bold;">
-    <a href="math_1.html" style="margin: 0 15px; color: #3975a7; text-decoration: none;">수학 공부법</a>
-    <a href="habit_1.html" style="margin: 0 15px; color: #3975a7; text-decoration: none;">공부 습관 만들기</a>
-    <a href="parent_1.html" style="margin: 0 15px; color: #3975a7; text-decoration: none;">부모 교육 가이드</a>
+    <a href="#수학 공부법" style="margin: 0 15px; color: #3975a7; text-decoration: none;">수학 공부법</a>
+    <a href="#공부 습관 만들기" style="margin: 0 15px; color: #3975a7; text-decoration: none;">공부 습관 만들기</a>
+    <a href="#부모 교육 가이드" style="margin: 0 15px; color: #3975a7; text-decoration: none;">부모 교육 가이드</a>
     
-    <a href="admission_1.html" style="margin: 0 15px; color: #3975a7; text-decoration: none;">입시 전략</a>
-<a href="exam_1.html" style="margin: 0 15px; color: #3975a7; text-decoration: none;">시험 전략 & 성적 관리</a>
+    <a href="#입시 전략" style="margin: 0 15px; color: #3975a7; text-decoration: none;">입시 전략</a>
+<a href="#시험 전략 & 성적 관리" style="margin: 0 15px; color: #3975a7; text-decoration: none;">시험 전략 & 성적 관리</a>
   </nav>
 
 
